// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StageSelect adds expected options to select when language is DE 1`] = `
[
  {
    "name": "Abyssal-Museum",
    "value": "Shellendorf Institute",
  },
  {
    "name": "Anchobit Games HQ",
    "value": "Ancho-V Games",
  },
  {
    "name": "Arowana Center",
    "value": "Arowana Mall",
  },
  {
    "name": "Backfisch-Stadion",
    "value": "Goby Arena",
  },
  {
    "name": "Buckelwal-Piste",
    "value": "Humpback Pump Track",
  },
  {
    "name": "Camp Schützenfisch",
    "value": "Camp Triggerfish",
  },
  {
    "name": "Cetacea-Markt",
    "value": "MakoMart",
  },
  {
    "name": "Counterpick",
    "value": "Counterpick",
  },
  {
    "name": "Flunder-Funpark",
    "value": "Wahoo World",
  },
  {
    "name": "Grundel-Pavillon",
    "value": "Skipper Pavilion",
  },
  {
    "name": "Grätenkanal",
    "value": "Snapper Canal",
  },
  {
    "name": "Heilbutt-Hafen",
    "value": "Port Mackerel",
  },
  {
    "name": "Hotel Neothun",
    "value": "New Albacore Hotel",
  },
  {
    "name": "Kofferfisch-Lager",
    "value": "Walleye Warehouse",
  },
  {
    "name": "Korallenviertel",
    "value": "The Reef",
  },
  {
    "name": "Manta Maria",
    "value": "Manta Maria",
  },
  {
    "name": "Molluskelbude",
    "value": "Musselforge Fitness",
  },
  {
    "name": "Muränentürme",
    "value": "Moray Towers",
  },
  {
    "name": "Perlmutt-Akademie",
    "value": "Inkblot Art Academy",
  },
  {
    "name": "Punkasius-Skatepark",
    "value": "Blackbelly Skatepark",
  },
  {
    "name": "Seeigel-Rockbühne",
    "value": "Starfish Mainstage",
  },
  {
    "name": "Steinköhler-Grube",
    "value": "Piranha Pit",
  },
  {
    "name": "Störwerft",
    "value": "Sturgeon Shipyard",
  },
  {
    "name": "Tümmlerkuppel",
    "value": "Kelp Dome",
  },
  {
    "name": "Unbekannte Arena",
    "value": "Unknown Stage",
  },
  {
    "name": "Wandelzone",
    "value": "Shifty Station",
  },
]
`;

exports[`StageSelect adds expected options to select when language is EN 1`] = `
[
  {
    "name": "Ancho-V Games",
    "value": "Ancho-V Games",
  },
  {
    "name": "Arowana Mall",
    "value": "Arowana Mall",
  },
  {
    "name": "Blackbelly Skatepark",
    "value": "Blackbelly Skatepark",
  },
  {
    "name": "Camp Triggerfish",
    "value": "Camp Triggerfish",
  },
  {
    "name": "Counterpick",
    "value": "Counterpick",
  },
  {
    "name": "Goby Arena",
    "value": "Goby Arena",
  },
  {
    "name": "Humpback Pump Track",
    "value": "Humpback Pump Track",
  },
  {
    "name": "Inkblot Art Academy",
    "value": "Inkblot Art Academy",
  },
  {
    "name": "Kelp Dome",
    "value": "Kelp Dome",
  },
  {
    "name": "MakoMart",
    "value": "MakoMart",
  },
  {
    "name": "Manta Maria",
    "value": "Manta Maria",
  },
  {
    "name": "Moray Towers",
    "value": "Moray Towers",
  },
  {
    "name": "Musselforge Fitness",
    "value": "Musselforge Fitness",
  },
  {
    "name": "New Albacore Hotel",
    "value": "New Albacore Hotel",
  },
  {
    "name": "Piranha Pit",
    "value": "Piranha Pit",
  },
  {
    "name": "Port Mackerel",
    "value": "Port Mackerel",
  },
  {
    "name": "Shellendorf Institute",
    "value": "Shellendorf Institute",
  },
  {
    "name": "Shifty Station",
    "value": "Shifty Station",
  },
  {
    "name": "Skipper Pavilion",
    "value": "Skipper Pavilion",
  },
  {
    "name": "Snapper Canal",
    "value": "Snapper Canal",
  },
  {
    "name": "Starfish Mainstage",
    "value": "Starfish Mainstage",
  },
  {
    "name": "Sturgeon Shipyard",
    "value": "Sturgeon Shipyard",
  },
  {
    "name": "The Reef",
    "value": "The Reef",
  },
  {
    "name": "Unknown Stage",
    "value": "Unknown Stage",
  },
  {
    "name": "Wahoo World",
    "value": "Wahoo World",
  },
  {
    "name": "Walleye Warehouse",
    "value": "Walleye Warehouse",
  },
]
`;
